be more explicit to avoid setting multiple styles and only shift subcomponents if overlay shift is applied

--- a/privacyidea/static_new/src/styles/styles.scss
+++ b/privacyidea/static_new/src/styles/styles.scss
@@ -62,7 +62,7 @@ body {
   --background-green-brand: linear-gradient(145deg, var(--green-brand-light), var(--green-brand-base));
 
   --box-shadow: var(--shadow-distance) var(--shadow-distance) var(--blur) var(--mat-sys-shadow),
-    var(--light-distance) var(--light-distance) var(--blur) var(--mat-sys-light);
+  var(--light-distance) var(--light-distance) var(--blur) var(--mat-sys-light);
   --box-shadow-white: var(--shadow-distance) var(--shadow-distance) var(--blur) var(--mat-sys-shadow),
   var(--light-distance) var(--light-distance) var(--blur) var(--mat-sys-light);
   --box-shadow-inset: inset var(--shadow-distance) var(--shadow-distance) var(--blur) var(--mat-sys-shadow),
@@ -663,14 +663,11 @@ body.selfservice-layout {
     }
 
     // Dialogs where navigation should remain accessible shift the overlay
-    &:has(.nav-accessible-dialog) {
+    &:has(.nav-accessible-dialog):not(:has(.nav-blocking-dialog)) {
       margin-left: var(--overlay-margin);
       width: calc(100% - var(--overlay-margin));
-    }
 
-    // Shift back components which could be contained in the dialog to be correctly aligned
-    &:has(.nav-accessible-dialog):has(.nav-blocking-dialog),
-    &:has(.nav-accessible-dialog) {
+      // Shift back components which could be contained in the dialog to be correctly aligned
       .mat-mdc-select-panel,
       .mat-mdc-autocomplete-panel,
       .mat-mdc-menu-panel,
